# ece579-tip-tap

./: ece_579_onset_classification.ipynb
Data Acquisition/: Collect.mlx  Process.mlx
Data Acquisition/soloPlane ML DAQ/: CMakeLists.txt  device.h  pins.h  soloPlaneBar.c
Data Acquisition/soloPlane ML DAQ/sensor/: CMakeLists.txt  sensor.c  sensor.h
Data Acquisition/soloPlane ML DAQ/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
inference-app/: CMakeLists.txt
inference-app/src/: defines.h  dsp_pipeline.cpp  main.cpp  sensor.h  tflite_model.h  tflite_model_slow.h
inference-app/src/databus/: CMakeLists.txt  databus.c  databus.h
